--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,8 +3,8 @@ import Layout from "../layouts/Layout.astro";
 import Three from "../components/Three.jsx";
 ---
 
-<Layout title="1000LIVES">
+<Layout title="FINIPECTINA">
 	<main class="h-screen flex justify-center bg-slate-500">
-		<Three client:load title="1000LIVES" />
+		<Three client:load title="FINIPECTINA" />
 	</main>
 </Layout>
